# src/Controllers/userController.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from 'express';
 
 import * as UserService from '../services/userService';
+import { ValidateHash } from '../utility/hashData';
 import { ValidateRegisterData,ValidateUpdateData } from '../utility/validateData';
 import generateID from '../utility/IDGenerater';
 
@@ -72,4 +73,37 @@ const EditUser = async (req: Request, res: Response): Promise<void> => {
   }
 };
 
-export { GetAllUsers, GetUserDetail, Register, EditUser };
+const Login = async (req: Request, res: Response): Promise<void> => {
+  const validateResult = await ValidateUpdateData(req);
+  if (typeof validateResult === 'string') {
+    res.status(400).json(validateResult);
+  } else {
+    try {
+      if(validateResult.MobilePhone!==undefined && validateResult.Password!==undefined){
+        const results = await UserService.Login(validateResult.MobilePhone,validateResult.Password);
+        if (results.length!==0)
+          {
+            const selectUser = results[0] as { [key: string]: any };
+            if(await ValidateHash(validateResult.Password,selectUser['Password']))
+            {
+              res.status(200).json('登入成功');
+            }
+              res.status(401).json('密碼錯誤');
+          }
+            res.status(401).json('找不到此用戶');
+      } else if(validateResult.MobilePhone===undefined && validateResult.Password!==undefined){
+        res.status(400).json('請輸入手機號碼');
+      } else{
+        res.status(400).json('請輸入密碼');
+      };
+    } catch (error) {
+      console.error(error);
+      res.status(500).json({ message: 'Error login', error });
+    }
+  }
+};
+
+export {
+  GetAllUsers, GetUserDetail, Register,
+  EditUser, Login
+};
