# src/Routers/userRouter.ts
@@ -11,5 +11,6 @@ router.get('/register', (req, res) => {
 
 router.post('/register',UserController.Register);
 router.put('/edit', UserController.EditUser);
+router.get('/login', UserController.Login);
 
 export default router;
